Rewritten the README.rst file to include more information. Rewritten the introduction of the docs for the same reason. Added community guidelines. Updated the MANIFEST.in file to exclude specific patterns. Included a check in PRISM's __init__.py file, to see if mpi4py >= 3.0.0 is used in case MPI is used. Added NumPy citation to the JOSS paper.

--- a/joss_paper/paper.bib
+++ b/joss_paper/paper.bib
@@ -162,3 +162,11 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.462..250M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@Misc{NumPy,
+  author =    {Travis Oliphant},
+  title =     {{NumPy}: A guide to {NumPy}},
+  year =      {2006},
+  publisher = {USA: Trelgol Publishing},
+  url = "http://www.numpy.org/"
+}
