--- a/joss_paper/paper.bib
+++ b/joss_paper/paper.bib
@@ -173,16 +173,21 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{PRISM,
-   author = {{van der Velden}, E. and {Duffy}, A.~R. and {Croton}, D. and 
-	{Mutch}, S.~J. and {Sinha}, M.},
-    title = "{Model dispersion with PRISM; an alternative to MCMC for rapid analysis of models}",
-  journal = {The Astrophysical Journal Supplement Series},
-archivePrefix = "arXiv",
-   eprint = {1901.08725},
- primaryClass = "astro-ph.IM",
- keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Computational Physics},
-     year = 2019,
-      doi = {10.3847/1538-4365/ab1f7d},
-   adsurl = {http://adsabs.harvard.edu/abs/2019arXiv190108725V},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+        author = {{van der Velden}, E. and {Duffy}, A.~R. and {Croton}, D. and
+            {Mutch}, S.~J. and {Sinha}, M.},
+        title = "{Model dispersion with PRISM; an alternative to MCMC for rapid analysis of models}",
+        journal = {The Astrophysical Journal Supplement Series},
+        keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Computational Physics},
+        year = "2019",
+        month = "Jun",
+        volume = {242},
+        number = {2},
+        eid = {22},
+        pages = {22},
+        doi = {10.3847/1538-4365/ab1f7d},
+        archivePrefix = {arXiv},
+        eprint = {1901.08725},
+        primaryClass = {astro-ph.IM},
+        adsurl = {http://adsabs.harvard.edu/abs/2019ApJS..242...22V},
+        adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
