Added second tutorial on ModelLink subclasses. Made some small changes to the ExampleLink and LineLink classes in the documentation to be a bit more clear.

--- a/tutorials/1_basic_usage.ipynb
+++ b/tutorials/1_basic_usage.ipynb
@@ -38,7 +38,7 @@
     "It can be seen as the \"conductor\" of the *PRISM* package, as it governs all other objects and orchestrates their communications and method calls.\n",
     "It is linked to a model by a user-written `ModelLink` subclass object, which allows the `Pipeline` to extract all necessary model information and call the model.\n",
     "For this tutorial, we will use one of *PRISM*'s basic `ModelLink` subclasses (the `GaussianLink` class).\n",
-    "See [tutorial 2](./2_making_subclass.ipynb) for more information on the `ModelLink` class and how to make a subclass."
+    "See [ModelLink subclasses](./2_modellink_subclasses.ipynb) for more information on the `ModelLink` class and how to make a subclass."
    ]
   },
   {
