--- a/tutorials/2_modellink_subclasses.ipynb
+++ b/tutorials/2_modellink_subclasses.ipynb
@@ -252,9 +252,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dict = {1: [4.5, 0.1],    # f(1) = 4.5 +- 0.1\n",
-    "             2.5: [6.8, 0.1],  # f(2.5) = 6.8 +- 0.1\n",
-    "             -2: [0, 0.1]}     # f(-2) = 0 +- 0.1\n",
+    "model_data = {1: [4.5, 0.1],    # f(1) = 4.5 +- 0.1\n",
+    "              2.5: [6.8, 0.1],  # f(2.5) = 6.8 +- 0.1\n",
+    "              -2: [0, 0.1]}     # f(-2) = 0 +- 0.1\n",
     "modellink_obj = test_subclass(LineLink, model_data=model_data)"
    ]
   },
