Finished third tutorial. Added some extra clarifications to the docs that indexing in PRISM starts at 1 instead of 0. Rewritten the outputs of the rsdl_var and active_par_data properties to use dicts instead of lists. Added some extra clarifications what exactly an implausibility value is to the docs and tutorials.

--- a/tutorials/2_modellink_subclasses.ipynb
+++ b/tutorials/2_modellink_subclasses.ipynb
@@ -122,6 +122,12 @@
    "source": [
     "### Basic properties\n",
     "Before we can write a `ModelLink` subclass, we first have to understand what exactly is happening in the `ExampleLink` class given above.\n",
+    "Every `ModelLink` subclass needs to be provided with two different data sets: *model parameters* and *model data*.\n",
+    "The model parameters define which parameters the model can take, what their names are and in what value range each parameter must be.\n",
+    "The model data on the other hand, states where in a model realization a data value must be retrieved and compared with a provided observational value.\n",
+    "One can think of the model data as the observational constraints used to calculate the likelihood in a Bayesian analysis.\n",
+    "These two data sets can be hard-coded or provided during initialization, which we will explain further below.\n",
+    "\n",
     "Since every model is different, with some requiring preparations in order to work properly, the constructor method (`__init__()`) may be extended to include any custom code to be executed when the subclass is initialized.\n",
     "The superclass constructor (`__init__()` of `ModelLink`) must always be called, as it sets several important flags and properties, but the time at which this is done does not matter for *PRISM* itself.\n",
     "During the initialization of the `Emulator` class (initialized automatically by `Pipeline`), it is checked whether or not the superclass constructor of a provided `ModelLink` instance was called (to avoid this from being forgotten).\n",
