--- a/tutorials/1_basic_usage.ipynb
+++ b/tutorials/1_basic_usage.ipynb
@@ -65,7 +65,7 @@
     "Now that we have imported these two classes, we should initialize our `ModelLink` subclass, the `GaussianLink` class in this case.\n",
     "In addition to user-defined arguments, every `ModelLink` subclass takes two optional arguments, *model_parameters* and *model_data*.\n",
     "The use of either one will add the provided parameters/data to the default parameters/data defined in the class.\n",
-    "Since the `GaussianLink` class does not have default data defined, it is required to supply it with some data during initialization (using an array, dict or external file)."
+    "Since the `GaussianLink` class does not have default data defined, it is required to supply it with some data constraints during initialization (using an array, dict or external file)."
    ]
   },
   {
@@ -274,8 +274,12 @@
     "An emulator iteration must have been analyzed first before the next iteration can be constructed.\n",
     "If we were to attempt to construct the next iteration without analyzing the last first, `Pipeline` will simply call `analyze()` first before construction.\n",
     "\n",
-    "Analyzing an emulator iteration also has a different effect: it sets the implausibility parameters for that iteration.\n",
-    "Before the analysis, they can be changed freely (which affects the `evaluate()` and `project()`-methods).\n",
+    "Analyzing an emulator iteration also has a different effect: it sets the implausibility parameters for that iteration, which consist of the implausibility cut-offs and wildcards.\n",
+    "The implausibility cut-offs determine what the maximum implausibility values are that an evaluated sample is allowed to have, to be considered 'plausible'.\n",
+    "For example, if the implausibility cut-offs are $[4.0, 3.5, 3.2]$ and a sample evaluated in the emulator has implausibility values $[3.8, 3.1, 3.7]$, then this sample would be marked as 'implausible', as the second-highest implausibility value is higher than the second-highest implausibility cut-off ($3.7 > 3.5$).\n",
+    "However, if one would have added an implausibility wildcard to the analysis, which ignores the highest implausibility value, then this sample would be marked as 'plausible' (as $3.7 \\leq 4.0$ and $3.1 \\leq 3.5$).\n",
+    "\n",
+    "Before the analysis, the implausibility parameters can be changed freely (which affects the `evaluate()` and `project()`-methods).\n",
     "After the analysis however, they can only be changed by reanalyzing the iteration itself with different parameters.\n",
     "This is to make sure that the used parameters throughout an iteration are consistent."
    ]
