Fixed a bug where the obtained init_walkers in the get_walkers()-function were not copied, which meant that the internally stored values could be modified.

--- a/tutorials/3_class_properties.ipynb
+++ b/tutorials/3_class_properties.ipynb
@@ -262,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The performance of the emulator iteration can also be checked by looking at the amount of variance in the model outputs that the emulator could not explain with the polynomial functions.\n",
+    "We can also check the performance of the emulator iteration by looking at the amount of variance in the model outputs that the emulator could not explain with the polynomial functions.\n",
     "This variance is called the *residual variance*, and a general rule is that the lower it is, the more accurate is the emulator:"
    ]
   },
