Finished writing the tutorial on hybrid sampling (will still add more package examples).

--- a/tutorials/4_hybrid_sampling.ipynb
+++ b/tutorials/4_hybrid_sampling.ipynb
@@ -67,6 +67,8 @@
     "# Imports\n",
     "from corner import corner\n",
     "from e13tools.pyplot import f2tex\n",
+    "from e13tools.sampling import lhd\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from prism import Pipeline\n",
     "from prism.modellink import GaussianLink\n",
@@ -78,7 +80,7 @@
    "metadata": {},
    "source": [
     "We also require a constructed emulator of the desired model.\n",
-    "For this tutorial, we will use the trusty `GaussianLink` class again, but feel free to use a different `ModelLink` subclass or modify the settings below:"
+    "For this tutorial, we will use the trusty `GaussianLink` class again, but feel free to use a different `ModelLink` subclass or modify the settings below (keep in mind that the second iteration may take a little while to analyze):"
    ]
   },
   {
@@ -102,7 +104,19 @@
     "\n",
     "# Construct required iterations\n",
     "for i in range(pipe.emulator.emul_i+1, emul_i+1):\n",
-    "    pipe.construct(i)"
+    "    # For reproducibility, set the NumPy random seed for each iteration\n",
+    "    np.random.seed(1313*i)\n",
+    "\n",
+    "    # Use analyze=False to use different impl_cuts for different iterations\n",
+    "    pipe.construct(i, analyze=False)\n",
+    "\n",
+    "    # Use different analysis settings for iteration 2\n",
+    "    if(i == 2):\n",
+    "        pipe.base_eval_sam = 8000\n",
+    "        pipe.impl_cut = [4.0, 3.8, 3.6]\n",
+    "\n",
+    "    # Analyze iteration\n",
+    "    pipe.analyze()"
    ]
   },
   {
@@ -137,19 +151,18 @@
    "outputs": [],
    "source": [
     "# Use impl_sam if it is available (default)\n",
-    "n, p0 = get_walkers(pipe)\n",
-    "print(\"Number of plausible starting positions (default): %i\" % (n))\n",
+    "n_walkers, p0_walkers = get_walkers(pipe)\n",
+    "print(\"Number of plausible starting positions (default): %i\" % (n_walkers))\n",
     "\n",
-    "# Propose 2000 starting positions\n",
-    "n_walkers = 2000\n",
-    "n, p0 = get_walkers(pipe, init_walkers=n_walkers)\n",
-    "print(\"Number of plausible starting positions (integer): %i\" % (n))\n",
+    "# Propose 10000 starting positions\n",
+    "init_walkers = 10000\n",
+    "n_walkers, p0_walkers = get_walkers(pipe, init_walkers=init_walkers)\n",
+    "print(\"Number of plausible starting positions (integer): %i\" % (n_walkers))\n",
     "\n",
-    "# Propose custom set of 2000 starting positions\n",
-    "from e13tools.sampling import lhd\n",
-    "init_walkers = lhd(n_walkers, modellink_obj._n_par, modellink_obj._par_rng)\n",
-    "n, p0 = get_walkers(pipe, init_walkers=init_walkers)\n",
-    "print(\"Number of plausible starting positions (custom) : %i\" % (n))"
+    "# Propose custom set of 10000 starting positions\n",
+    "init_walkers = lhd(10000, modellink_obj._n_par, modellink_obj._par_rng)\n",
+    "n_walkers, p0_walkers = get_walkers(pipe, init_walkers=init_walkers)\n",
+    "print(\"Number of plausible starting positions (custom) : %i\" % (n_walkers))"
    ]
   },
   {
@@ -157,7 +170,8 @@
    "metadata": {},
    "source": [
     "Note that when there is still a large part of parameter space left, the number of plausible starting positions will probably greatly vary between runs.\n",
-    "As hybrid sampling works better when plausible space is very small, it is usually recommended that we first construct a good emulator before attempting to do hybrid sampling."
+    "As hybrid sampling works better when plausible space is very small, it is usually recommended that we first construct a good emulator before attempting to do hybrid sampling.\n",
+    "This is also why we used different implausibility parameters for the analysis of the second emulator iteration."
    ]
   },
   {
@@ -210,6 +224,11 @@
     "# Pre-calculate the data variance. Assume data_err is centered\n",
     "data_var = np.array([err[0]**2 for err in modellink_obj._data_err])\n",
     "\n",
+    "# Add a global counter to measure the number of times the model is called\n",
+    "global call_counter\n",
+    "call_counter = 0\n",
+    "\n",
+    "\n",
     "# Define lnpost\n",
     "def lnpost(par_set):\n",
     "    # Check if par_set is within parameter space and return -infty if not\n",
@@ -217,6 +236,10 @@
     "    par_rng = modellink_obj._par_rng\n",
     "    if not ((par_rng[:, 0] <= par_set)*(par_set <= par_rng[:, 1])).all():\n",
     "        return(-np.infty)\n",
+    "\n",
+    "    # Increment call_counter by one\n",
+    "    global call_counter\n",
+    "    call_counter += 1\n",
     "\n",
     "    # Convert par_set to par_dict\n",
     "    par_dict = dict(zip(modellink_obj._par_name, par_set))\n",
@@ -307,7 +330,7 @@
    "metadata": {},
    "source": [
     "And, finally, as it is very likely that we will frequently use `get_walkers()` and `get_hybrid_lnpost_fn()` together, the `get_walkers()`-function allows for the *lnpost_fn* input argument to be provided to it.\n",
-    "Doing so will automatically call the `get_hybrid_lnpost_fn()`-function factory using the provided *lnpost_fn* and the same input arguments given to `get_walkers()`, and return the obtained `hybrid_lnpost()`-function in addition to the initial MCMC walkers.\n",
+    "Doing so will automatically call the `get_hybrid_lnpost_fn()`-function factory using the provided *lnpost_fn* and the same input arguments given to `get_walkers()`, and return the obtained `hybrid_lnpost()`-function in addition to the starting positions of the MCMC walkers.\n",
     "So, before we get into applying hybrid sampling to our model, let's use the `get_walkers()`-function to obtain all the variables we need:"
    ]
   },
@@ -317,14 +340,211 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n, p0, hybrid_lnpost = get_walkers(pipe, lnpost_fn=lnpost)"
+    "n_walkers, p0_walkers, hybrid_lnpost = get_walkers(pipe, lnpost_fn=lnpost)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Application"
+    "## Application\n",
+    "Now that we know how to apply hybrid sampling to our model in theory, let's see it in action.\n",
+    "When picking an MCMC sampling method to use, we have to keep in mind that it must allow for the starting positions of the MCMC walkers to be provided; and it must be able to use a custom log-posterior probability function.\n",
+    "As this is very common for most sampling methods, we will cover a few of the most popular MCMC sampling packages in Python in separate sections.\n",
+    "\n",
+    "Because the emulator can be used in two different ways to speed up the parameter estimation process, we will explore three different samplers for each MCMC sampling package: *normal* (solely use normal sampling); *kick-started* (use normal sampling but start in plausible space); and *hybrid* (use normal sampling with added emulator prior).\n",
+    "By using these three different samplers, we can explore what the effect is of introducing an emulator to the MCMC sampling process.\n",
+    "So, for consistency, let's define their names here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = [\"Normal\", \"Kick-Started\", \"Hybrid\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before continuing, please make sure that the appropriate package is installed before going to the related section.\n",
+    "Also, if you would like to see an example of a different sampling package in here, please open a [GitHub issue](https://github.com/1313e/PRISM/issues) about it (keep in mind that all requested packages must be `pip`-installable)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### emcee\n",
+    "Probably one of the most popular MCMC sampling packages in Python for quite some time now, is the [*emcee*](https://emcee.readthedocs.io/en/latest/) package.\n",
+    "For that reason, it would be weird to not include it here.\n",
+    "So, let's import the required definitions and see how we can use *emcee* to do hybrid sampling:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from emcee import EnsembleSampler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the required class for doing the sampling, we can setup the three different samples.\n",
+    "As the `EnsembleSampler` requires that the number of MCMC walkers is even, we will also have to make sure that this is the case (by duplicating all walkers if it is not):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Duplicate all MCMC walkers if n_walkers is odd\n",
+    "if n_walkers % 2:\n",
+    "    n_walkers *= 2\n",
+    "    p0_walkers = np.concatenate([p0_walkers]*2)\n",
+    "\n",
+    "# Generate some initial positions for the normal sampler\n",
+    "p0_walkers_n = lhd(n_sam=n_walkers,\n",
+    "                   n_val=modellink_obj._n_par,\n",
+    "                   val_rng=modellink_obj._par_rng)\n",
+    "\n",
+    "# Create empty dict to hold the samplers\n",
+    "samplers = {}\n",
+    "\n",
+    "# Define the three different samplers\n",
+    "# Add their initial positions and their initial model call counter\n",
+    "# Normal sampler\n",
+    "samplers[names[0]] = [p0_walkers_n, 0,\n",
+    "                      EnsembleSampler(nwalkers=n_walkers,\n",
+    "                                      dim=modellink_obj._n_par,\n",
+    "                                      lnpostfn=lnpost)]\n",
+    "\n",
+    "# Kick-started sampler\n",
+    "samplers[names[1]] = [p0_walkers, sum(pipe.emulator.n_sam[1:]),\n",
+    "                      EnsembleSampler(nwalkers=n_walkers,\n",
+    "                                      dim=modellink_obj._n_par,\n",
+    "                                      lnpostfn=lnpost)]\n",
+    "\n",
+    "# Hybrid sampler\n",
+    "samplers[names[2]] = [p0_walkers, sum(pipe.emulator.n_sam[1:]),\n",
+    "                      EnsembleSampler(nwalkers=n_walkers,\n",
+    "                                      dim=modellink_obj._n_par,\n",
+    "                                      lnpostfn=hybrid_lnpost)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the declaration of the three different entries for the `samplers` dict, we can easily see what the differences are between the samplers.\n",
+    "But, everything is now ready to do some (hybrid) sampling:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define number of MCMC iterations\n",
+    "n_iter = 50\n",
+    "\n",
+    "# Loop over all samplers\n",
+    "for name, (p0, call_counter, sampler) in samplers.items():\n",
+    "    # Run the sampler for n_iter iterations\n",
+    "    sampler.run_mcmc(p0, n_iter)\n",
+    "\n",
+    "    # Make sure to save current values of p0 and call_counter for reruns\n",
+    "    samplers[name][0] = sampler.chain[:, -1]\n",
+    "    samplers[name][1] = call_counter\n",
+    "\n",
+    "    # Create a corner plot showing the results\n",
+    "    fig = corner(xs=sampler.flatchain,\n",
+    "                 labels=modellink_obj._par_name,\n",
+    "                 show_titles=True,\n",
+    "                 truths=modellink_obj._par_est)\n",
+    "    fig.suptitle(\"%s: $%s$ iterations, $%s$ evaluations, $%s$%% acceptance\"\n",
+    "                 % (name, f2tex(sampler.iterations), f2tex(call_counter),\n",
+    "                    f2tex(np.average(sampler.acceptance_fraction*100))),\n",
+    "                 y=0.025)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From these three corner plots, we can learn a few things.\n",
+    "First of all, we can see that the parameter estimation accuracy of the normal sampler (first plot) is noticeably lower than that of the other two.\n",
+    "However, it also used less model evaluations (as shown by the title at the bottom of each plot).\n",
+    "The reason for this is that we added the initial number of model evaluations required for constructing the emulator as well, which is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum(pipe.emulator.n_sam[1:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we take this into account, then we see that the number of model evaluations used during the sampling process, is very similar for all three.\n",
+    "However, if we were to run the normal sampler for another *n_iter* iterations:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get variables for normal sampler\n",
+    "name = names[0]\n",
+    "p0, call_counter, sampler = samplers[name]\n",
+    "\n",
+    "# Run the sampler for n_iter iterations\n",
+    "sampler.run_mcmc(p0, n_iter)\n",
+    "\n",
+    "# Make sure to save current values of p0 and call_counter for reruns\n",
+    "samplers[name][0] = sampler.chain[:, -1]\n",
+    "samplers[name][1] = call_counter\n",
+    "\n",
+    "# Create a corner plot showing the results\n",
+    "fig = corner(xs=sampler.flatchain,\n",
+    "             labels=modellink_obj._par_name,\n",
+    "             show_titles=True,\n",
+    "             truths=modellink_obj._par_est)\n",
+    "fig.suptitle(\"%s: $%s$ iterations, $%s$ evaluations, $%s$%% acceptance\"\n",
+    "             % (name, f2tex(sampler.iterations), f2tex(call_counter),\n",
+    "                f2tex(np.average(sampler.acceptance_fraction*100))),\n",
+    "             y=0.025)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see here that the normal sampler has still not reached the same accuracy as the kick-started and hybrid samplers, even though now it used more model evaluations.\n",
+    "This shows how much of an impact skipping the burn-in phase has on the convergence rate of the sampling process, even when using a simple model like our single Gaussian.\n",
+    "\n",
+    "Something that we can also note is that the kick-started and hybrid samplers have very, very similar results and accuracies.\n",
+    "This, again, shows the impact of skipping the burn-in phase.\n",
+    "However, it does seem that the hybrid sampler used less evaluations than the kick-started sampler, which is a result of the emulator steering the first into the right direction."
    ]
   }
  ],
