Added intent to also cover dynesty. [ci skip]

--- a/tutorials/4_hybrid_sampling.ipynb
+++ b/tutorials/4_hybrid_sampling.ipynb
@@ -381,7 +381,7 @@
     "### emcee\n",
     "Probably one of the most popular MCMC sampling packages in Python for quite some time now, is the [*emcee*](https://emcee.readthedocs.io/en/latest/) package.\n",
     "For that reason, it would be weird to not include it here.\n",
-    "So, let's import the required definitions and see how we can use *emcee* to do hybrid sampling:"
+    "So, let's import the required definitions and see how we can use *emcee* to do hybrid sampling (we also call `get_walkers()` again to make sure any changes made previously are overridden):"
    ]
   },
   {
@@ -390,7 +390,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from emcee import EnsembleSampler"
+    "from emcee import EnsembleSampler\n",
+    "n_walkers, p0_walkers, hybrid_lnpost = get_walkers(pipe, lnpost_fn=lnpost)"
    ]
   },
   {
@@ -545,6 +546,14 @@
     "Something that we can also note is that the kick-started and hybrid samplers have very, very similar results and accuracies.\n",
     "This, again, shows the impact of skipping the burn-in phase.\n",
     "However, it does seem that the hybrid sampler used less evaluations than the kick-started sampler, which is a result of the emulator steering the first into the right direction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### dynesty\n",
+    "Coming soon..."
    ]
   }
  ],
