A few more changes to the fourth tutorial. [ci skip]

--- a/tutorials/4_hybrid_sampling.ipynb
+++ b/tutorials/4_hybrid_sampling.ipynb
@@ -37,7 +37,7 @@
     "3. If the sample is labeled as implausible by the emulator, it also receives a prior probability of zero.\n",
     "   If it is plausible, the sample is evaluated in the same way as for normal sampling;\n",
     "4. Optionally, a scaled value of the first implausibility cut-off is used as an exploratory method by adding an additional (non-zero) prior probability.\n",
-    "   This can be enabled by using the *impl_prior* input argument for the `get_hybrid_lnpost_fn()`-function.\n",
+    "   This can be enabled by using the *impl_prior* input argument in the `get_hybrid_lnpost_fn()`-function factory (which we will cover in a bit).\n",
     "\n",
     "Since the emulator that *PRISM* makes of a model is not defined outside of the parameter space given by `modellink_obj.par_rng`, the second step is necessary to make sure the results are valid.\n",
     "There are several advantages of using hybrid sampling over normal sampling:\n",
@@ -116,7 +116,10 @@
     "        pipe.impl_cut = [4.0, 3.8, 3.6]\n",
     "\n",
     "    # Analyze iteration\n",
-    "    pipe.analyze()"
+    "    pipe.analyze()\n",
+    "\n",
+    "# Set NumPy random seed to something random\n",
+    "np.random.seed()"
    ]
   },
   {
@@ -398,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have the required class for doing the sampling, we can setup the three different samples.\n",
+    "Now that we have the required class for doing the sampling, we can set up the three different samples.\n",
     "As the `EnsembleSampler` requires that the number of MCMC walkers is even, we will also have to make sure that this is the case (by duplicating all walkers if it is not):"
    ]
   },
@@ -504,7 +507,7 @@
    "metadata": {},
    "source": [
     "If we take this into account, then we see that the number of model evaluations used during the sampling process, is very similar for all three.\n",
-    "However, if we were to run the normal sampler for another *n_iter* iterations:"
+    "However, if we were to run the normal sampler for another *n_iter* iterations, this might change:"
    ]
   },
   {
@@ -541,11 +544,12 @@
    "metadata": {},
    "source": [
     "We can see here that the normal sampler has still not reached the same accuracy as the kick-started and hybrid samplers, even though now it used more model evaluations.\n",
-    "This shows how much of an impact skipping the burn-in phase has on the convergence rate of the sampling process, even when using a simple model like our single Gaussian.\n",
+    "This shows how much of an impact skipping the burn-in phase has on the convergence speed of the sampling process, even when using a simple model like our single Gaussian.\n",
     "\n",
     "Something that we can also note is that the kick-started and hybrid samplers have very, very similar results and accuracies.\n",
     "This, again, shows the impact of skipping the burn-in phase.\n",
-    "However, it does seem that the hybrid sampler used less evaluations than the kick-started sampler, which is a result of the emulator steering the first into the right direction."
+    "However, it does seem that the hybrid sampler used less evaluations than the kick-started sampler, which is a result of the emulator steering the first into the right direction.\n",
+    "The effect for this simple model is very minor though, but can easily become much more important for more complex models."
    ]
   },
   {
