Started a bit on writing the dynesty hybrid sampling example.

--- a/tutorials/4_hybrid_sampling.ipynb
+++ b/tutorials/4_hybrid_sampling.ipynb
@@ -557,8 +557,36 @@
    "metadata": {},
    "source": [
     "### dynesty\n",
-    "Coming soon..."
+    "Another Python sampling package that is becoming increasingly popular these days, is [*dynesty*](https://dynesty.readthedocs.io/en/latest/).\n",
+    "The *dynesty* package is capable of performing something called *dynamic nested sampling*, where it dynamically allocates additional (nested) samples/walkers whenever this is needed.\n",
+    "This fixes a few of the problems that MCMC (or nested) samplers have, so it would make sense to cover it here as well.\n",
+    "As *dynesty* is capable of doing both nested sampling and dynamic nested sampling, let's import the definitions we need for those and cover both:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dynesty import DynamicNestedSampler, NestedSampler\n",
+    "n_walkers, p0_walkers, hybrid_lnpost = get_walkers(pipe, lnpost_fn=lnpost)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although it may sound a bit weird, given that *dynesty* is about the dynamic aspect of nested sampling, let's start with normal nested sampling first.\n",
+    "So, *nested sampling* is a bit different from normal MCMC sampling, in that its main goal is to maximize the Bayesian evidence ($P(D|I)$, often referred to as $z$) rather than maximizing the posterior probability ($P(M|D,I)$)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
