Introduced the new 'req_n_walkers' input argument for the get_walkers()-function (#26). This input argument allows for a specific minimum number of plausible starting positions to be requested. Added a new (hidden) function called _do_mh_walkers(), which takes the plausible 'init_walkers' and creates separate MCMC chains with them using a custom Metropolis-Hastings sampling algorithm. Written tests for the new functionalities. Modified the tutorials and docs to describe the new functionalities.

--- a/tutorials/4_hybrid_sampling.ipynb
+++ b/tutorials/4_hybrid_sampling.ipynb
@@ -155,24 +155,28 @@
    "source": [
     "# Use impl_sam if it is available (default)\n",
     "n_walkers, p0_walkers = get_walkers(pipe)\n",
-    "print(\"Number of plausible starting positions (default): %i\" % (n_walkers))\n",
+    "print(\"Number of plausible starting positions (default) : %i\" % (n_walkers))\n",
     "\n",
     "# Propose 10000 starting positions\n",
     "init_walkers = 10000\n",
     "n_walkers, p0_walkers = get_walkers(pipe, init_walkers=init_walkers)\n",
-    "print(\"Number of plausible starting positions (integer): %i\" % (n_walkers))\n",
+    "print(\"Number of plausible starting positions (integer) : %i\" % (n_walkers))\n",
     "\n",
     "# Propose custom set of 10000 starting positions\n",
     "init_walkers = lhd(10000, modellink_obj._n_par, modellink_obj._par_rng)\n",
     "n_walkers, p0_walkers = get_walkers(pipe, init_walkers=init_walkers)\n",
-    "print(\"Number of plausible starting positions (custom) : %i\" % (n_walkers))"
+    "print(\"Number of plausible starting positions (custom)  : %i\" % (n_walkers), flush=True)\n",
+    "\n",
+    "# Request at least 1000 plausible starting positions (requires v1.1.4 or later)\n",
+    "n_walkers, p0_walkers = get_walkers(pipe, req_n_walkers=1000)\n",
+    "print(\"Number of plausible starting positions (specific): %i\" % (n_walkers))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that when there is still a large part of parameter space left, the number of plausible starting positions will probably greatly vary between runs.\n",
+    "Note that when there is still a large part of parameter space left, the number of plausible starting positions will probably greatly vary between runs when a specific number is requested.\n",
     "As hybrid sampling works better when plausible space is very small, it is usually recommended that we first construct a good emulator before attempting to do hybrid sampling.\n",
     "This is also why we used different implausibility parameters for the analysis of the second emulator iteration."
    ]
@@ -185,6 +189,7 @@
     "However, as some sampling methods use unit space, we can request normalized starting positions by providing `get_walkers()` with *unit_space=True*.\n",
     "We have to keep in mind though that, because of the way the emulator works, there is no guarantee for a specific number of plausible starting positions to be returned.\n",
     "Having the desired emulator iteration already analyzed may give us an indication of how many starting positions in total we need to propose to be left with a specific number.\n",
+    "However, starting with v1.1.4, the `get_walkers()`-function takes the *req_n_walkers* argument, which allows us to request a specific minimum number of plausible starting positions (as shown).\n",
     "\n",
     "When the starting positions of our MCMC walkers have been determined, we can use them in our MCMC sampling script, avoiding the previously mentioned burn-in phase.\n",
     "Although this in itself can already be very useful, it does not allow us to perform hybrid sampling yet.\n",
